# EP_LWR_coupled_simulation

./: .gitignore  LICENSE.txt  README.md  main_test.py  pyproject.toml  requirements.txt  setup.cfg
.github/agents/: agent.agent.md
.github/workflows/: ci.yml
experimentation/: example_shared_mem_and_synch_from_chat_gpt.py  example_shared_mem_and_synch_with_floats_from_chat_gpt.py  try_get_values.py  try_interfering_with_ep_sim.py  try_interfering_with_ep_sim_one_building.py  try_set_value_surrouding_surface_temperature.py  try_set_values.py
src/lwrepcoulping/: ep_coupled_simulation_manager.py  ep_simulation_instance.py  ep_simulation_instance_with_shared_memory.py  lwr_idf_additionnal_strings.py  make_actuator.py
src/lwrepcoupling/: __init__.py  _ep_simulation_instance.py  ep_coupled_simulation_manager.py  ep_coupled_simulation_manager_new.py  ep_simulation_instance.py  ep_simulation_instance_with_shared_memory.py  exceptions.py  lwr_idf_additionnal_strings.py  main_run_lwr_simulation.py  schemas.py  utils_matrices.py
src/lwrepcoupling/_schemas/: __init__.py  io_models.py  runtime_models.py  solver_models.py
src/lwrepcoupling/_utils/: __init__.py  utils_csr_matrices.py  utils_idf_additional_strings.py  utils_inverse_matrices.py  utils_io.py  utils_resolution_matrices.py
src/lwrepcoupling/not_relevant_anymore/: ep_simulation_instance.py  make_actuator.py
src/lwrepcoupling/pyenergyplus/: api.py  func.py  version_info.md
src/lwrepcoupling/tools/: schemas.py
src/lwrepcoupling/tools/case_study/: __init__.py  geometry_parsers.py  idf_exporter.py  io_handlers.py  radiation_benchmark.py
src/lwrepcoupling/tools/ep_models/: __init__.py  default.py  generate_model.py  geometries.py  shapes.py  utils_epjson.py
src/lwrepcoupling/tools/vf_computation/: analytical_vf.py
src/lwrepcoupling/utils/: __init__.py  utils_csr_matrices.py  utils_folder_manipulation.py  utils_idf_additionnal_strings.py  utils_inverse_matrices.py  utils_io.py  utils_resolution_matrices.py
src/pyenergyplus/: datatransfer.py  plugin.py
tests/: main_test_synchronization.py
tests/data/idfs/: in_0.idf  in_1.idf
tests/data/matrix_samples/: reflectance_mtx.npz  vf_mtx.npz
tests/integration/: test_barrier_collapse.py  test_coupled_simulations_real_run.py  test_coupled_simulations_system.py  test_idf_structure_debug.py  test_parallel_supervision.py
tests/lwrepcoupling/: ep_coupled_simulation_manager_test.py  ep_simulation_instance_with_shared_memory_test.py  lwr_idf_additionnal_strings_test.py  main_test_coupling_from_bua_preprocess.py  main_test_without_pytest.py  test_inversion_techniques.py
tests/lwrepcoupling/utils/: main_performance_analysis_inversion.py  test_utils_inverse_matrices.py
tests/unit/: test_ep_coupled_simulation_manager.py  test_lwr_idf_additionnal_strings.py
tests/unit/schemas/: test_io_models.py  test_runtime_models.py  test_solver_models.py
tests/unit/tools/case_study/: test_geometry_parsers.py  test_idf_exporter.py  test_io_handler.py  test_radiation_benchmark.py
tests/unit/tools/ep_models/: test_default.py  test_generate_model.py  test_geometries.py  test_shapes.py  test_utils_epjson.py
tests/unit/tools/vf_computation/: test_analytical_vf.py
tests/unit/utils/: test_utils_csr_matrix.py  test_utils_idf_additional_strings.py  test_utils_inverse_matrices.py  test_utils_io.py  test_utils_resolution_matrices.py
