[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lwrepcoupling"
dynamic = ["version"]
description = "A package to for coupled simulation with EnergyPlus considering the long-wave radiation exchanges among buildings outdoor surfaces"
requires-python = ">=3.12"

[tool.hatch.version]
path = "src/lwrepcoupling/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lwrepcoupling"]

[tool.pytest.ini_options]
pythonpath = "."

testpaths = ["tests/unit"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "INFO"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
# extend-exclude = ["src/lwrepcoupling/pyenergyplus/"]

[tool.ruff.lint]
# E: Error, F: Pyflakes, B: Bugbear
select = ["E", "F", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "basic" # Perfect balance for scientific computing pipelines
reportMissingTypeStubs = false # Silences errors from legacy packages without stubs
reportInvalidTypeVarUse = "error"
reportGeneralTypeIssues = "error"