[metadata]
name = lwrepcoupling
version = 0.1
description = A package to for coupled simulation with EnergyPlus considering the long-wave radiation exchanges among buildings outdoor surfaces
author = Elie MEDIONI
author_email = elie.medioniwiii@gmail.com
url = https://github.com/Eliewiii/EP_LWR_coupled_simulation
license = MIT

[options]
packages = find:
exclude =
    tests*
install_requires =
    numpy

[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src
exclude =
    tests*
    experimentation*


[tool:pytest]
pythonpath = .

[coverage:run]
branch = True